2015-02-21  Julien Bect  <julien.bect@supelec.fr>

	Optimize for speed

	* misc/distrib/stk_distrib_normal_cdf.m: Optimize for speed
	* covfcs/stk_gausscov_aniso.m: Optimize for speed
	* covfcs/stk_materncov32_aniso.m: Optimize for speed
	* covfcs/stk_materncov52_aniso.m: Optimize for speed
	* covfcs/stk_materncov_aniso.m: Optimize for speed

2015-02-18  Julien Bect  <julien.bect@supelec.fr>

	stk_feval.m: Do not return an stk_dataframe object systematically

	* arrays/generic/stk_feval.m: Return an stk_dataframe object only
	if the input x itself is an stk_dataframe object.

	Optimize for speed (and fix a tiny bug)

	* arrays/@stk_dataframe/stk_dataframe.m: Optimize for speed
	* arrays/@stk_dataframe/set.m: Optimize for speed (and fix a tiny bug)
	* arrays/@stk_dataframe/horzcat.m: Optimize for speed
	* arrays/@stk_dataframe/vertcat.m: Optimize for speed
	* arrays/@stk_dataframe/subsref.m: Optimize for speed
	* arrays/generic/stk_feval.m: Optimize for speed

2015-02-17  Julien Bect  <julien.bect@supelec.fr>

	Initialize model.param with NaNs.

	* core/stk_model.m: Initialize model.param with NaNs.
	* core/stk_predict.m: Fix unit tests.
	* covfcs/stk_discretecov.m: Fix unit tests.
	* covfcs/stk_gausscov_aniso.m: Fix unit tests.
	* covfcs/stk_gausscov_iso.m: Fix unit tests.
	* covfcs/stk_materncov32_aniso.m: Fix unit tests.
	* covfcs/stk_materncov32_iso.m: Fix unit tests.
	* covfcs/stk_materncov52_aniso.m: Fix unit tests.
	* covfcs/stk_materncov52_iso.m: Fix unit tests.
	* covfcs/stk_materncov_aniso.m: Fix unit tests.
	* covfcs/stk_materncov_iso.m: Fix unit tests.
	* utils/stk_conditioning.m: Fix unit tests.
	* utils/stk_generate_samplepaths.m: Fix unit tests.

2015-02-11  Julien Bect  <julien.bect@supelec.fr>

	stk_feval.m: Accept any object that implement feval

	* arrays/generic/stk_feval.m: Accept any object that implement
	feval (not just strings and function handles).

2015-02-10  Julien Bect  <julien.bect@supelec.fr>
